1-system/7-litellm/litellm.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: litellm-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - litellm.localhost
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: litellm.unique.svc.cluster.local
            port:
              number: 4000
